# pandora-sim

./: .flake8  .gitattributes  .gitignore  404.html  CHANGES.md  Makefile  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: black.yml  tests.yml
GJ3470/: GJ3470.ipynb  index.html
WASP-69/: WASP-69.ipynb  index.html
conventions/: conventions.ipynb  index.html
docs/: GJ3470.ipynb  README.md  WASP-69.ipynb  conventions.ipynb  conventions.md  demo.ipynb  intro-to-pandorasat.ipynb  intro-to-pandorasim.ipynb  irdetector.md  nirsim.md  optics.md  orbit.md  pandorasat-demo-1.ipynb  pandorasat.md  pandorasim.md  psf.md  sim.md  target.md  visibledetector.md  visiblesim.md  wcs-explainer.ipynb  wcs-explainer.md
docs/notebooks/: demo.ipynb
intro-to-pandorasat/: index.html  intro-to-pandorasat.ipynb
irdetector/: index.html
nirsim/: index.html
optics/: index.html  optics.md
orbit/: index.html  orbit.md
pandorasat/: index.html
pandorasat-demo-1/: index.html
psf/: index.html
search/: search_index.json
sim/: index.html
snippets/: README.md  calibrationtests.py  make_vis_psf_fits_file.py  psfposition_lookuptables.py
src/pandorasat/: __init__.py  citations.py  detector.py  filters.py  irdetector.py  optics.py  orbit.py  pandorasat.py  psf.py  targets.py  utils.py  uvdetector.py  visibledetector.py  wcs.py
src/pandorasat/data/: GAIA.GAIA0.G.xml  GAIA.GAIA0.Gbp.xml  GAIA.GAIA0.Grp.xml  HST.WFC3_IR.G141.xml  Pandora.Pandora.Visible.xml  Pandora.Pandora.Visible_UV.csv  Pandora.Pandora.Visible_UV.xml  Pandora.Pandora.Visible_UV_Option2.csv  Pandora_nir.fits  Pandora_nir_20210602.mat  Pandora_vis.fits  Pandora_vis_20210602.mat  aluminium_coating.csv  dichroic-transmission.csv  fov_distortion.csv  pandora.mplstyle  pixel_vs_wavelength.csv  targets.csv  uv_enhanced_aluminium.csv
src/pandorasat/data/phoenix/comp/nonhst/: johnson_b_002.fits  johnson_b_003_syn.fits  johnson_b_004_syn.fits  johnson_i_001.tab  johnson_i_002.fits  johnson_i_003_syn.fits  johnson_j_002.fits  johnson_j_003_syn.fits  johnson_k_001.tab  johnson_k_002.fits  johnson_k_003_syn.fits  johnson_r_002.fits  johnson_r_003_syn.fits  johnson_u_002.fits  johnson_u_003_syn.fits  johnson_u_004_syn.fits  johnson_v_002.fits  johnson_v_003_syn.fits  johnson_v_004_syn.fits
src/pandorasat/data/phoenix/grid/phoenix/: AA_README  catalog.fits
src/pandorasat/data/phoenix/mtab/: 3241637sm_tmt.fits  4cm1612bm_tmg.fits  5182153pm_tmc.fits
src/pandorasim/: __init__.py  citations.py  detector.py  docstrings.py  irdetector.py  nirsim.py  orbit.py  pandorasim.py  psf.py  roi.py  sim.py  targets.py  utils.py  visibledetector.py  visiblesim.py  wcs.py
src/pandorasim/data/: HST.WFC3_IR.G102.xml  Pandora.Pandora.Visible.xml  Pandora.Pandora.Visible2.xml  Pandora_IR wl_vs_position.txt  pandora_visible_qe.csv  pixel_vs_wavelength_vis.csv
src/pandorasim/data/phoenix/comp/nonhst/: johnson_b_001.tab  johnson_j_001.tab  johnson_j_002.fits  johnson_j_003_syn.fits  johnson_k_002.fits  johnson_r_001.tab  johnson_u_001.tab
tests/: test_nirsim.py  test_pandora_sat.py  test_pandora_sim.py  test_targets.py  test_utils.py  test_visiblesim.py
visibledetector/: index.html
visiblesim/: index.html
(+86 files in other folders)
