[tool.poetry]
name = "pandorasat"
version = "0.1.1"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
astropy = "^5.0.4"
pandas = "^1.4.2"
scipy = "^1.8.1"
tqdm = "^4.64.0"
pysynphot = ">=2.0.0"
astroquery = "^0.4.6"
numba = "^0.56.3"
black = "^22.12.0"
starry = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.6.0"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.11"
mkdocstrings = "^0.18.1"
jupyterlab = "<3.1.0"
mkdocs-jupyter = "^0.20.1"
pytkdocs = "^0.16.1"
matplotlib = "^3.5.2"
lxml = "^4.8.0"
line-profiler = "^3.5.1"
grismconf = "^1.32"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
