[tool.poetry]
name = "pandorasim"
version = "0.4.1"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
astropy = "^5.0.4"
pandas = "^1.4.2"
scipy = "^1.8.1"
tqdm = "^4.64.0"
pysynphot = ">=2.0.0"
astroquery = "^0.4.6"
pytest-remotedata = "^0.4.0"
pygments = "2.11.0"
setuptools = "^67.7.2"
openpyxl = "^3.1.2"
pandorasat = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.6.0"
flake8 = "^4.0.1"
black = "^22.12.0"
isort = "^5.10.1"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.11"
jupyterlab = "<3.1.0"
mkdocs-jupyter = "^0.20.1"
pytkdocs = "^0.16.1"
matplotlib = "^3.5.2"
lxml = "^4.8.0"
grismconf = "^1.32"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
mkdocstrings = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79

[tool.isort]
import_heading_firstparty = 'First-party/Local'
import_heading_future = 'Future'
import_heading_stdlib = 'Standard library'
import_heading_thirdparty = 'Third-party'
line_length = 79
multi_line_output = 3
no_lines_before = 'LOCALFOLDER'
profile = 'black'
